--- a/texTemplate.org
+++ b/texTemplate.org
@@ -1,1 +1,24 @@
-#+NAME: dot:
+#+NAME: dot:texTemplate
+#+HEADER: :cache yes :tangle yes :exports none
+#+HEADER: :results output graphics
+#+BEGIN_SRC dot :file ./texTemplate.svg 
+digraph { 
+fontname="Times"; 
+fontsize = 12; 
+splines = false; 
+ranksep = 0.2; 
+nodesep = 0.5; 
+node [shape = box] 
+//1. set node 
+
+//2. set path 
+
+A -> B 
+//3. set rank 
+{rank = same; A, B} 
+}
+#+END_SRC
+#+CAPTION: Table/figure name Out put of above code
+#+NAME: fig:texTemplate 
+#+RESULTS: dot:texTemplate 
+
