--- a/texTemplate.org
+++ b/texTemplate.org
@@ -12,6 +12,7 @@ node [shape = box]
 //1. set node 
 j[label = "Template.tex"]
 info [label = "info.tex"]
+main [label = "main.tex"]
 //2. set path 
 
 A -> B 
