- ‘.#texTemplate.org’ / ‘texTemplate.org’

--- a/texTemplate.org
+++ b/texTemplate.org
@@ -10,9 +10,11 @@ ranksep = 0.2;
 nodesep = 0.5; 
 node [shape = box] 
 //1. set node 
-j[label = "Template.tex"]
+j[label = "template.tex"]
 info [label = "info.tex"]
 main [label = "main.tex"]
+bst [label = "template.bst"]
+
 //2. set path 
 
 A -> B 
