--- a/texTemplate.org
+++ b/texTemplate.org
@@ -10,9 +10,10 @@ ranksep = 0.2;
 nodesep = 0.5; 
 node [shape = box] 
 //1. set node 
-j[label = "template.tex"]
+temp [label = "template.tex"]
 info [label = "info.tex"]
 main [label = "main.tex"]
+bib [label = "cite.bib"]
 bst [label = "template.bst"]
 
 //2. set path 
