--- a/texTemplate.org
+++ b/texTemplate.org
@@ -11,7 +11,7 @@ nodesep = 0.5;
 node [shape = box] 
 //1. set node 
 temp [label = "template.tex"]
-info [label = "info.tex", color = green]
+info [label = "info.tex", color = gold]
 main [label = "main.tex", color = red]
 bib [label = "cite.bib", color = red]
 bst [label = "template.bst"]
@@ -23,6 +23,6 @@ temp -> {info,main, bib, bst} [label = input]
 #+END_SRC
 #+CAPTION: Table/figure name Out put of above code
 #+NAME: fig:texTemplate 
-#+RESULTS[09e718810726f5de78bc6d8c9962517a7e3540ac]: dot:texTemplate
+#+RESULTS[6bc4d86f0a9b8014b6dc958449a5936fb86bdf67]: dot:texTemplate
 [[file:./texTemplate.svg]]
 
