--- a/texTemplate.org
+++ b/texTemplate.org
@@ -14,7 +14,7 @@ temp [label = "template.tex", color = green]
 info [label = "info.tex", color = gold]
 main [label = "main.tex", color = red]
 bib [label = "cite.bib", color = red]
-bst [label = "template.bst"]
+bst [label = "template.bst", color = green]
 //2. set path 
 temp -> {info,main, bib, bst} [label = input]
 //3. set rank 
@@ -23,6 +23,6 @@ temp -> {info,main, bib, bst} [label = input]
 #+END_SRC
 #+CAPTION: Table/figure name Out put of above code
 #+NAME: fig:texTemplate 
-#+RESULTS[6bc4d86f0a9b8014b6dc958449a5936fb86bdf67]: dot:texTemplate
+#+RESULTS[dc934be0d573807888db36b6230e63760ff4e50d]: dot:texTemplate
 [[file:./texTemplate.svg]]
 
