- ‘.#texTemplate.org’ / ‘texTemplate.org’

--- a/texTemplate.org
+++ b/texTemplate.org
@@ -17,13 +17,13 @@ bib [label = "cite.bib", color = red]
 bst [label = "template.bst", color = green]
 sty [label = "template.sty"]
 //2. set path 
-temp -> {info,main, bib, bst} [label = input]
+temp -> {info,main, bib, bst, sty} [label = input]
 //3. set rank 
 
 }
 #+END_SRC
 #+CAPTION: Table/figure name Out put of above code
 #+NAME: fig:texTemplate 
-#+RESULTS[a6ee85c0ed95c9bb1d12751e8257805b83258788]: dot:texTemplate
+#+RESULTS[0872157dabdfac80228988e4d6c18a3c0b22c36f]: dot:texTemplate
 [[file:./texTemplate.svg]]
 
