--- a/texTemplate.org
+++ b/texTemplate.org
@@ -6,7 +6,7 @@
   fontname="Times"; 
   fontsize = 12; 
   splines = false; 
-  ranksep = 0.2; 
+  ranksep = 0.5; 
   nodesep = 0.5; 
   node [shape = box] 
   //1. set node 
@@ -16,7 +16,7 @@
   bib [label = "cite.bib", color = red]
   bst [label = "template.bst", color = green]
   sty [label = "template.sty"]
-  fig [label = "Figs", color=red, fill = true]
+  fig [label = "Figs", color=red, fill = lightblue]
   //2. set path 
   temp -> {info,main, bib, bst, sty} [label = input]
   //3. set rank 
@@ -25,6 +25,6 @@
 #+END_SRC
 #+CAPTION: Table/figure name Out put of above code
 #+NAME: fig:texTemplate 
-#+RESULTS[e760b66b1c62e8cd888452c8641e0678e00dcde3]: dot:texTemplate
+#+RESULTS[b658282dd3df8e48fa4b5da8a364383e82224098]: dot:texTemplate
 [[file:./texTemplate.svg]]
 
