--- a/texTemplate.org
+++ b/texTemplate.org
@@ -18,6 +18,7 @@
   sty [label = "template.sty"]
   fig [label = "Figs", color=red]
   build [label  = "build", color = red]
+  gen [label = "compile.sh", color = blue]
   //2. set path 
   temp -> {info,main, bib, bst, sty} [label = input]
   //3. set rank 
@@ -26,6 +27,6 @@
 #+END_SRC
 #+CAPTION: Table/figure name Out put of above code
 #+NAME: fig:texTemplate 
-#+RESULTS[83ae82ab6b678a18116888559de44205dfa2120f]: dot:texTemplate
+#+RESULTS[fe07119e4bb6de4e1cf950bb12d073b9c64e7cfa]: dot:texTemplate
 [[file:./texTemplate.svg]]
 
