--- a/texTemplate.org
+++ b/texTemplate.org
@@ -18,6 +18,7 @@
   bst [label = "template.bst", color = green]
   sty [label = "template.sty", color = green]
   fig [label = "figs", color=red, shape="folder"]
+  sec [label = "secs", color=red, shape="folder"]
   build [label  = "build", color = blue, shape="folder"]
   gen [label = "compile.sh", color = blue]
   //2. set path
@@ -28,5 +29,5 @@
 #+END_SRC
 #+CAPTION: Table/figure name Out put of above code
 #+NAME: fig:texTemplate
-#+RESULTS[f20b63b9d8e259e2ca3298c9ecc8eefdb4e42fec]: dot:texTemplate
+#+RESULTS[0e132243e0a6b382e8d875dd21b98fbdb45c5ffb]: dot:texTemplate
 [[file:./texTemplate.svg]]
