--- a/texTemplate.org
+++ b/texTemplate.org
@@ -11,7 +11,7 @@
   nodesep = 0.5;
   node [shape = box]
   //1. set node
-  temp [label = "template.tex", color = green]
+  temp [label = "project", color = green]
   info [label = "info.tex", color = gold]
   main [label = "main.tex", color = red]
   bib [label = "cite.bib", color = red]
@@ -29,5 +29,5 @@
 #+END_SRC
 #+CAPTION: Table/figure name Out put of above code
 #+NAME: fig:texTemplate
-#+RESULTS[0e132243e0a6b382e8d875dd21b98fbdb45c5ffb]: dot:texTemplate
+#+RESULTS[03bfbd9ac3791604b46b128af619703f094ff078]: dot:texTemplate
 [[file:./texTemplate.svg]]
