--- a/texTemplate.org
+++ b/texTemplate.org
@@ -22,7 +22,7 @@
   build [label  = "build", color = blue, shape="folder"]
   gen [label = "compile.sh", color = blue]
   //2. set path
-  proj -> {fig sec main bib sty bst }
+  proj -> {fig sec main bib sty bst build gen}
   sec -> {info}
   //3. set rank
 
@@ -30,5 +30,5 @@
 #+END_SRC
 #+CAPTION: Table/figure name Out put of above code
 #+NAME: fig:texTemplate
-#+RESULTS[4c06c7062910b5c5504bc52eb143996f0527f3ce]: dot:texTemplate
+#+RESULTS[4a951d7275f7230703c2d5ffb6d2dc40b13d4903]: dot:texTemplate
 [[file:./texTemplate.svg]]
