/ ‘texTemplate.org’ / ‘texTemplate.svg’

--- a/texTemplate.org
+++ b/texTemplate.org
@@ -27,7 +27,7 @@
   //2. set path
 
   proj -> {fig sec main temp bib build gen}
-  temp -> {}
+  temp -> {cls, bst, }
   sec -> {info, secs}
   //3. set rank
 
