- ‘.#texTemplate.org’ / ‘texTemplate.org’

--- a/texTemplate.org
+++ b/texTemplate.org
@@ -14,8 +14,8 @@
   proj [label = "project", color = green, shape="folder"]
   info [label = "info.tex", color = blue]
   secs [label = "sections.tex", color = blue]
-  main [label = "main.tex \n Template", color = red]
-  bib [label = "cite.bib \n Mendely", color = red]
+  main [label = "main.tex \n (Template)", color = red]
+  bib [label = "cite.bib \n (Mendely)", color = red]
   bst [label = "template.bst", color = green]
   cls [label = "template.cls", color = green]
   sty [label = "template.sty", color = green]
