--- a/texTemplate.org
+++ b/texTemplate.org
@@ -12,7 +12,7 @@
   node [shape = box]
   //1. set node
   proj [label = "project", color = green, shape="folder"]
-  front [label = "info.tex", color = blue]
+  front [label = "xFront.tex", color = blue]
   secs [label = "sections.tex", color = blue]
   main [label = "main.tex \n (Template)", color = red]
   bib [label = "cite.bib \n (Mendely)", color = red]
@@ -35,5 +35,5 @@
 #+END_SRC
 #+CAPTION: Table/figure name Out put of above code
 #+NAME: fig:texTemplate
-#+RESULTS[b3f366f97bd47c4bc873a1720396dd955a45ad7a]: dot:texTemplate
+#+RESULTS[8e6246a069a2516ad21f4693b3086287f8a81048]: dot:texTemplate
 [[file:./texTemplate.svg]]
