--- a/texTemplate.org
+++ b/texTemplate.org
@@ -1,3 +1,4 @@
+* Fig
 #+NAME: dot:texTemplate
 #+HEADER: :cache yes :tangle yes :exports none
 #+HEADER: :results output graphics
@@ -37,3 +38,4 @@
 #+NAME: fig:texTemplate
 #+RESULTS[093771a75b0bdff590ddf847d483cc22aafc950e]: dot:texTemplate
 [[file:./texTemplate.svg]]
+* Links
