--- a/texTemplate.org
+++ b/texTemplate.org
@@ -43,3 +43,5 @@ elsdoc.pdf
 http://cdn.elsevier.com/assets/pdf_file/0011/109388/elsdoc.pdf
 elsarticle.zip
 http://cdn.elsevier.com/assets/file/0008/109358/elsarticle.zip
+CTAN
+http://www.ctan.org/tex-archive/macros/latex/contrib/elsarticle
